<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.a1s2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.a1s2.ui.seaech.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.a1s2.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_reel"
        android:name="com.example.a1s2.ui.reel.fragment_reel"
        android:label="Reel"
        tools:layout="@layout/fragment_reel" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.a1s2.ui.profiile.fragment_profile"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

</navigation>